Fix rendering on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,13 +74,18 @@ body {
   background: linear-gradient(to bottom,
       transparent,
       rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
+  display: grid;
+  place-items: center;
 }
 
 main {
   display: flex;
   flex-direction: column;
   gap: .5rem;
-  padding: 6rem;
+  margin-top: 2rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  max-width: 600px;
   min-height: 100vh;
 }
 
@@ -192,7 +197,7 @@ details[open] summary {
   display: grid;
   place-items: center;
   width: 1.25rem;
-  aspect-ratio: 1 / 1;
+  height: 1.25rem;
   background-image: linear-gradient(135deg, orange, var(--clr-pink));
   border-radius: 1rem;
   font-weight: 600;
@@ -212,4 +217,12 @@ details[open] summary {
   right: .5rem;
   background-image: url(./imgs/github-mark.svg);
   background-size: contain;
+}
+
+.label {
+  white-space: nowrap;
+}
+
+.search-field {
+  width: 40%;
 }
